# tree-sitter-fluentbit

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  setup.py
.github/workflows/: ci.yaml  publish-manual.yaml  publish.yaml
bindings/c/: tree-sitter-fluentbit.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fluentbit/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFluentbit/: fluentbit.h
bindings/swift/TreeSitterFluentbitTests/: TreeSitterFluentbitTests.swift
corpus/: schema.txt
docs/: index.html
docs/assets/tree-sitter-fluentbit-0.1.0/: tree-sitter-fluentbit.wasm
docs/assets/tree-sitter-fluentbit-0.1.0-alpha.0/: tree-sitter-fluentbit.wasm
docs/assets/tree-sitter-fluentbit-0.1.0-alpha.1/: tree-sitter-fluentbit.wasm
docs/assets/tree-sitter-fluentbit-0.1.0-alpha.2/: tree-sitter-fluentbit.wasm
docs/assets/tree-sitter-fluentbit-0.1.0-alpha.3/: tree-sitter-fluentbit.wasm
docs/assets/tree-sitter-fluentbit-0.1.0-alpha.4/: tree-sitter-fluentbit.wasm
docs/assets/tree-sitter-playground-0.20.8/: style.css
docs/assets/tree-sitter-playground-0.22.6/: style.css
examples/: kubernetes.conf
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/corpus/: schema.txt
