[package]
name = "tree-sitter-fluentbit"
description = "fluent-bit grammar for tree-sitter"
version = "0.1.0-alpha.2"
keywords = ["incremental", "parsing", "fluentbit"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sh-cho/tree-sitter-fluentbit"
authors = ["Seonghyeon Cho <seonghyeoncho96@gmail.com>"]
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
